# the-copy

./: .dockerignore  .env.sample  .firebaserc  .gitignore  .trufflehogignore  AGENTS.md  AUDIT.md  AUTH_TEST.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  README_DEPLOY.md  SECURITY.md  STATUS.md  TASKS.md  collated_functions.txt  deploy.sh  firebase.json  hosting.ZnJvbnRlbmQvZGlzdA.cache  index.html  jest.config.js  package-lock.json  package.json  quick-status.sh  setup.sh  tailwind.config.js  toba.vsfire-1.4.1.vsix
.github/: settings.yml
.github/workflows/: ci.yml  opencode.yml
.idx/: dev.nix  integrations.json
backend/: .env.example  .env.production  .env.production.example  .env.production.template  Cargo.toml  data.sqlite  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/migrations/: 001_add_performance_indexes.sql  002_enable_rls.sql  003_fix_rls_policies.sql  20250807234729_rustic_bread.sql
backend/src/: logger.ts  main.rs  schema.sql  seed.ts  server.ts  types.ts
backend/src/__tests__/: auth-failure.test.ts  auth.test.ts  auth_rls.test.ts  gemini.test.ts  pdf.test.ts  pdf_smoke.test.ts  screenplay.test.ts
backend/src/config/: cors.ts  load-env.ts  secrets.ts  validator.ts
backend/src/logger/: enhanced-logger.ts
backend/src/metrics/: metrics.ts
backend/src/middleware/: errorHandler.ts  input-sanitizer.ts  rate-limit.ts  security.ts  validation.ts
backend/src/migrations/: 1757582712604_001-initial-schema.js  1757582879138_002-add-refresh-tokens.js
backend/src/routes/: dramatic-analysis.ts
backend/src/types/: index.ts
backend/src/validators/: password.ts
backend/src/workers/: pdf-worker.ts
dataconnect/: dataconnect.yaml
dataconnect-generated/: index.cjs.js
dataconnect/example/: connector.yaml
frontend/: .env.example  .env.production.example  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/docs/: API-Development-Guide.md  (+4 more)
react/: package-lock.json
reports/: FunctionMigrationReport.json
scripts/: backup_db.sh  purge-secrets-history.sh
shared/: Cargo.toml
src/: App.tsx  api.ts  server.ts  setupTests.ts  vite-env.d.ts
worker/: Cargo.toml
worker/src/: lib.rs  main.rs
(+99 files in other folders)
