[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
dotenvy = "0.15"
futures = "0.3"
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
